testdata/test/resources/com/yafred/asn1/test/should-fail/enumerated_duplicate_number2.asn
Enum1 DEFINITIONS ::=
BEGIN

B ::= ENUMERATED {a, b, ..., c, d(2)} -- invalid, since both 'c' and 'd' equal 2

END